--- a/proto-lens/package.yaml
+++ b/proto-lens/package.yaml
@@ -31,6 +31,7 @@ library:
   source-dirs: src
 
   other-modules:
+    - Data.ProtoLens.Encoding.Parser.Internal
     - Data.ProtoLens.TextFormat.Parser
   dependencies:
     - base >= 4.9 && < 4.13
@@ -41,8 +42,10 @@ library:
     - lens-labels == 0.3.*
     - parsec == 3.1.*
     - pretty == 1.1.*
+    - primitive == 0.6.*
     - text == 1.2.*
     - transformers >= 0.4 && < 0.6
+    - vector >= 0.11 && < 0.13
     - void == 0.7.*
 
 tests:
